# PyDough

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  debug.txt  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  demo_startup.sh  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  bodosql_testing.yml  build_pip.yml  custom_testing.yml  databricks_testing.yml  defog_daily_update.yml  duckdb_testing.yml  mysql_testing.yml  oracle_testing.yml  pgsql_testing.yml  postgres_testing.yml  pr_testing.yml  s3_testing.yml  sf_masked_testing.yml  sf_testing.yml  tpch_db.yml  trino_testing.yml
benchmark/: README.md  benchmark_metadata.json  benchmark_metrics.csv  benchmarker.py  executer.py  executor.py  questions.csv
benchmark/comparisons/: comparison_20260629_R_v1.00.25_vs_20260625_M_28178696262.csv
benchmark/metrics/: 2026-04-30_1.0.21.dev12+g5566db55a.d20260413.csv  2026-05-05_1.0.21.dev12+g5566db55a.d20260413.csv  2026-05-08_0.1.dev1+ge9502b3d3.csv  20260511_M_25676939357.csv  20260525_M_26422702385.csv  20260612_M_27390229579.csv  20260612_M_27427376223.csv  20260612_M_27436489100.csv  20260624_M_28108008631.csv  20260624_M_28115236272.csv  20260625_M_28178696262.csv  20260629_R_v1.00.25.csv
demos/: README.md  setup_tpch.sh
demos/metadata/: bodosql_demo_graph.json  tpch_demo_graph.json
demos/notebooks/: 1_introduction.ipynb  2_pydough_operations.ipynb  3_exploration.ipynb  4_tpch.ipynb  5_what_if.ipynb  6_pydough_TCPH_guide.ipynb  BODOSQL_TPCH.ipynb  BODOSQL_demo.ipynb  Databricks_TPCH.ipynb  DuckDB_TPCH.ipynb  Exploration.ipynb  Introduction.ipynb  MySQL_TPCH.ipynb  Oracle_TCPH.ipynb  PG_TPCH.ipynb  Postgres.ipynb  PyDoughDSLDemo.ipynb  SF_TPCH_q1.ipynb  Trino_TPCH.ipynb  basic_example.ipynb  bodosql_color_tables.py  gjd1.ipynb  pydough_operations.ipynb  tpch.ipynb  what_if.ipynb
documentation/: dsl.md  functions.md  ir.md  metadata.md  usage.md
jupyter_extensions/: pydough_magic.py
meta_visualizer/: .gitignore  DEVELOPER_DOCS.md  README.md  package-lock.json  package.json  serve.sh  server.js
meta_visualizer/public/: index.html
pydough/: __init__.py  exploration.py
pydough/configs/: README.md  __init__.py  pydough_configs.py  session.py
pydough/conversion/: README.md  __init__.py  agg_removal.py  agg_split.py  aggregate_join_transpose.py  column_bubbler.py  evaluate_unqualified.py  filter_pullup.py  filter_pushdown.py  hybrid_connection.py  hybrid_correlation_extraction.py  hybrid_decorrelater.py  hybrid_expressions.py  hybrid_filter_merger.py  hybrid_operations.py  hybrid_syncretizer.py  hybrid_translator.py  hybrid_tree.py  join_agg_transpose.py  join_aggregate_transpose.py  join_key_substitution.py  mask_server_candidate_shuttle.py  mask_server_candidate_visitor.py  mask_server_rewrite_shuttle.py  masking_critical_detection_visitor.py  masking_shuttles.py  merge_projects.py  projection_pullup.py  relational_converter.py  relational_simplification.py
pydough_jupyter_extensions/: README.md  pydough_magic.py  pyproject.toml
tests/: README.md  __init__.py  aGJD01.py  bad_pydough_functions.py  conftest.py  correlated_pydough_functions.py  defog_outputs.py  defog_test_functions.py  epoch_pydough_functions.py  exploration_examples.py  init_defog.sql  init_epoch.sql  init_technograph.sql  setup_defog.sh  simple_pydough_functions.py  technograph_pydough_functions.py  test_ast_collection.py  test_ast_collection_errors.py  test_ast_conversion.py  test_ast_expression.py  test_ast_expression_errors.py  test_bodosql.py  test_defog.py  test_documentation.py  test_explain_llm.py  test_exploration.py  test_expression_type_deducer.py  test_expression_type_deducer_errors.py  test_logging.py  test_mask_server.py  test_masked_sf.py  test_masked_sqlite.py  test_max_rows.py  test_metadata.py  test_metadata_errors.py  test_mock_mask_server.py  test_operator_ast.py  test_operator_ast_errors.py  test_pipeline.py  test_pipeline_bodosql.py  (+56 more)
tpch_demo/: README.md  test_tpch_download.py
training/: README.md  pydough_corpus.csv  scrap.py
(+5690 files in other folders)
