[project]
name = "pydough"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [{name = "Bodo.ai"}]
requires-python = ">=3.10"
# Note: sqlite is included in the standard library, so it doesn't need to be listed here.
dependencies = ["pytz", "sqlglot[rs]", "pandas>=2.0.0"]

[tool.uv]
dev-dependencies = ["pre-commit", "pytest", "ruff==0.6.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
unsafe-fixes = true
lint.extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]

lint.ignore = [
    "UP038",
]
