[project]
name = "pydough"
# TODO: Add the versioneer information.
dynamic = ["version"]
keywords = ["analytics"]
description = "Analytics DSL for Python"
readme = "README.md"
authors = [{name = "Bodo.ai"}]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Note: sqlite is included in the standard library, so it doesn't need to be listed here.
dependencies = ["pytz", "sqlglot", "pandas>=2.0.0", "jupyterlab"]

[project.urls]
# TODO: Add homepage + documentation when docs are live.
Repository = "https://github.com/bodo-ai/PyDough"

[tool.uv]
dev-dependencies = ["pre-commit", "pytest", "ruff==0.6.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
unsafe-fixes = true
lint.extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]
# Don't run ruff on any ipython notebooks as they may have
# names that don't statically resolve.
exclude = ["**/*.ipynb"]

lint.ignore = [
    "UP038",
]

[tool.mypy]
# Don't run mypy on any ipython notebooks
exclude = '.*\.ipynb$'
