[project]
name = "pydough"
dynamic = ["version"]
keywords = ["analytics"]
description = "Analytics DSL for Python"
readme = "README.md"
authors = [{name = "Bodo.ai"}]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Note: sqlite is included in the standard library, so it doesn't need to be listed here.
# There is a bug in some unit tests when run with sqlglot>=26.8.0
dependencies = ["pytz", "sqlglot==26.7.0", "pandas>=2.0.0", "jupyterlab"]

[project.urls]
# TODO: Add homepage + documentation when docs are live.
Repository = "https://github.com/bodo-ai/PyDough"

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "pytest",
    "ruff==0.6.7",
    "pytest-repeat",
    "boto3",
    "pydough[snowflake]",
    "pydough[mysql]",
    "pydough[postgres]",
    "pydough[server]",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python[pandas]==1.10.0"]
mysql = ["mysql-connector-python==9.5.0"]
postgres = ["psycopg2-binary"]
server = ["fastapi", "httpx", "uvicorn"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
unsafe-fixes = true
lint.extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]

lint.ignore = [
    "UP038",
]
# Don't run ruff on any ipython notebooks as they may have
# names that don't statically resolve.
exclude = ["**/*.ipynb"]

[tool.mypy]
# Don't run mypy on any ipython notebooks
exclude = '.*\.ipynb$'
